# SESC

./: .gitignore  README.md  deep-research-report.md  ism-system-plan.md  pyproject.toml
.claude/: settings.json
.claude/skills/cautiouskurns-blood-and-gold-pixellab-create-character/: SKILL.md
.claude/skills/unity-canvas-ui/: SKILL.md
.claude/skills/unity-patterns/: SKILL.md
configs/experiments/: ablation_mock.yaml  ablation_qwen7b.yaml  fixed_budget_qwen7b_long.yaml  s1_qwen7b.yaml
docs/: README.md
docs/evidence/: README.md
docs/evidence/ablation-qwen7b-llm-dev/: README.md  SHA256SUMS  ablation_summary.json  environment.json
docs/evidence/compress-audit-qwen7b-dev/: README.md  SHA256SUMS  compression_audit.json  environment.json  sample_isms.md
docs/evidence/compress-audit-qwen7b-v3/: README.md  SHA256SUMS  compression_audit.json  environment.json
docs/evidence/fixed-budget-N40/: README.md
docs/phases/: phase-1-synthetic-engine.md  phase-3-inference.md  phase-6-cache-cost.md  phase-7-swap-training.md  phase-8-qasper.md
docs/reviews/: llm-ism-diagnostic.md  study-conclusion.md
paper/: ism-mixed-results.tex
src/ism/: cli.py  config.py
src/ism/data/: io.py  (+6 more)
tests/: test_ablation.py  test_answers.py  test_cli.py  test_compression_audit.py  test_compressor.py  test_costs.py  test_data_io.py  test_diagnostics.py  test_disk_cache.py  test_generator.py  test_inference_cache.py  test_inference_contracts.py  test_inference_runner.py  test_long_context.py  test_qasper.py  test_reuse.py  test_rules.py  test_swap_training.py  test_transformers_backend.py
(+34 files in other folders)
